Fix rotated landscape video in wrong position

--- a/src/octoprint/static/less/octoprint.less
+++ b/src/octoprint/static/less/octoprint.less
@@ -590,7 +590,6 @@ ul.dropdown-menu li a {
   width: 100%;
   position: relative;
   outline: none;
-  background: #000000;
 
   #webcam_hls,
   #webcam_rtsp {
@@ -603,17 +602,15 @@ ul.dropdown-menu li a {
     width: 100%;
     padding-bottom: 56.25%;
     pointer-events: none;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: auto;
 
     .rotation_target {
       position: absolute;
       transform: rotate(-90deg);
       width: 100%;
-      top: 0;
-      bottom: 0;
-      left: 0;
-      right: 0;
-      margin: auto;
-      pointer-events: none;
 
       div {
         width: 100%;
